# practice-ai-testing

./: .gitignore  .mcp.json  CLAUDE.md  Jenkinsfile  README.md  index.html  main.py  pyproject.toml  update_tree.py
.claude/: settings.json
.claude/commands/: audit-module.md  generate-test-cases.md  generate-test-scripts.md
.claude/hooks/: on-test-change.sh
.github/workflows/: api-tests.yml  deploy-allure.yml  tests.yml
api-allure-report/: index.html
api-allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
api-allure-report/export/: influxDbData.txt  prometheusData.txt
api-allure-report/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
api-allure-report/widgets/: duration.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
docs/: AI 辅助自动化测试开发 全阶段踩坑.md  practice_software_testing_api.json
docs/test-cases/: api-test-cases-v1.md  brand.md  cart.md  category.md  invoice.md  postcode.md  product.md  report.md  totp.md  user.md
scripts/: check_site_reachability.py
src/common/: config.py  data_factory.py  pytest_mcp_server.py
tests/: conftest.py
tests/api/: conftest.py  test_brand_api.py  test_cart_api.py  test_category_api.py  test_contact_api.py  test_favorite_api.py  test_image_api.py  test_invoice_api.py  test_payment_api.py  test_postcode_api.py  test_product_api.py  test_product_spec_api.py  test_report_api.py  test_totp_api.py  test_user_api.py
tests/ui/: conftest.py  test_account_dashboard.py  (+16 more)
ui-allure-report/: index.html
(+1236 files in other folders)
