[project]
name = "practice-ai-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.16.0",
    "playwright>=1.61.0",
    "pyotp>=2.10.0",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "pytest-rerunfailures>=16.3",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
addopts = "--reruns 2 --reruns-delay 1"
